# visual-novel

./: .gitignore  .gitmodules
Assets/: .gitignore  FontColor.asset  MainMixer.mixer  MasterAudioMixer.mixer
Assets/AddressableAssetsData/: AddressableAssetSettings.asset  DefaultObject.asset
Assets/AddressableAssetsData/AssetGroupTemplates/: Packed Assets.asset
Assets/AddressableAssetsData/AssetGroups/: Built In Data.asset  Default Local Group.asset  Localization-Assets-Shared.asset  (+3 more)
Assets/Editor/: Build.cs
Assets/Localizations/: Characters Shared Data.asset  Characters.asset  Characters_en.asset  Characters_ko.asset  Localization Settings.asset
Assets/Resources/SerializedDataFormatConverter/: .gitignore  README.md  pyproject.toml
Assets/Resources/SerializedDataFormatConverter/src/serialized_data_format_converter/: __init__.py
Assets/Resources/SerializedDataFormatConverter/src/serialized_data_format_converter/lib/: dialogue_v2.py
Assets/Scenes/: Game.unity  Main.unity  NameScene.unity  Scene1.unity
Assets/Scripts/: Chat.cs  Dialogue.cs  MainMenu.cs  NameScript.cs  Navigator.cs  OptionController.cs  SaveLoad.cs  Scripts.asmdef  SettingsMenu.cs  SettingsUI__AudioVolumeSliderController.cs
Assets/StreamingAssets/: chapter1.json  chapter1.prev.json  chapter2.json  chapter3.json  chapter4.json  chapter5.json  dgData.json  playerData.json
Assets/Tests/: BackgroundsTest.cs  CharactersTest.cs  DialogueDataContainersTest.cs  Tests.asmdef
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
(+88 files in other folders)
