[project]
name = "serialized-data-format-converter"
version = "0.1.0"
description = "Migrate from one different format version of the serialized data container to another."
authors = [
    { name = "Jonghyeon Park", email = "belline0124@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
app = "serialized_data_format_converter:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/serialized_data_format_converter"]
